# rs-data

./: .dockerignore  .env.example  .gitignore  README.md  compose.yaml  local.yaml  local.yml  prod.yaml  production.yaml  pyproject.toml
api/: .envs  Dockerfile  pyproject.toml
api/src/: main.py
api/src/db/: base.py
api/src/dbmf/: operations.py  routers.py
api/src/eu/: operations.py  routers.py
api/src/libs/: base_url.py  exceptions.py
api/src/tests/: conftest.py  models_us.py  test_eu_operations.py  test_eu_routers.py  test_us_operations.py  test_us_routers.py  tester_db.py
api/src/tests/eu/: conftest.py  test_operations.py  test_routers.py
api/src/us/: operations.py  routers.py
frontend/: .dockerignore  .envs  .gitignore  CONTRIBUTORS.txt  Dockerfile  LICENSE  entrypoint.sh  pyproject.toml
frontend/.devcontainer/: devcontainer.json
frontend/compose/production/django/: Dockerfile  entrypoint
frontend/compose/production/traefik/: traefik.yml
frontend/docs/: howto.rst  users.rst
frontend/src/: manage.py
frontend/src/config/: asgi.py  urls.py  wsgi.py
frontend/src/config/settings/: base.py  production.py
frontend/src/frontend/: conftest.py
frontend/src/frontend/dbmf/: apps.py  urls.py  views.py
frontend/src/frontend/libs/: stylers.py
frontend/src/frontend/macro_eu/: apps.py  views.py
frontend/src/frontend/macro_us/: views.py
frontend/src/frontend/templates/: base.html
frontend/src/frontend/users/: adapters.py  apps.py  urls.py
src/: main.py
src/.compose/.local/: Dockerfile  entrypoint.sh
src/.compose/.production/: Dockerfile  entrypoint.sh
src/.envs/: .updater
src/.envs/.local/: .frontend  .postgres
src/api/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
src/api/.compose/.local/: Dockerfile
src/api/.compose/.production/: Dockerfile  entrypoint.sh
src/api/.envs/: .app
src/api/.envs/.local/: .app
src/api/.envs/.production/: .app
src/api/compose/local/: Dockerfile  entrypoint.sh
src/api/compose/production/: Dockerfile
src/api/libs/: exceptions.py
src/api/operations/: eu.py  us.py
src/api/routers/: eu.py  us.py
src/api/tests/: conftest.py  factories_old.py  models.py  table_factories.py  test_eu_operations.py  test_eu_routers.py  test_operations_eu.py  tester_db.py
src/api/tests/eu/: test_routers.py
src/apps/: api.py  update.py
src/apps/updater/: main.py
src/apps/updater/libs/: statistics.py
src/apps/updater/us/: interfaces.py
src/db/: base.py
src/frontend/: .gitignore  Dockerfile  README.md  entrypoint.sh  local.yml  manage.py  production.yml  pyproject.toml
src/frontend/.envs/: .app  .local  .production
src/frontend/.envs/.local/: .app  .django  .postgres
src/frontend/.envs/.production/: .app
src/frontend/compose/local/django/: Dockerfile  start
src/frontend/compose/production/django/: Dockerfile  entrypoint  start
src/frontend/config/: urls.py
src/frontend/config/settings/: base.py  local.py  production.py  test.py
src/frontend/docs/: conf.py  index.rst  make.bat
src/frontend/frontend/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
src/frontend/frontend/libs/: stylers.py
src/frontend/frontend/macro_eu/: urls.py  views.py
src/frontend/frontend/macro_us/: apps.py  urls.py  views.py
src/frontend/frontend/templates/: base.html
src/frontend/frontend/templates/macro_eu/: eu_countries.html
src/frontend/frontend/templates/macro_us/: us_metrics copy.html  us_metrics.html
src/frontend/frontend/users/: admin.py  models.py  views.py
src/frontend/frontend/users/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
src/frontend/requirements/: base.txt  local.txt
src/libs/: cleaners.py  helpers.py  statistics.py
src/tests/libs/: test_cleaners.py  test_helpers.py
src/updater/: .envs  Dockerfile  entrypoint.sh  main.py  pyproject.toml
src/updater/.compose/.local/: Dockerfile  entrypoint.sh
src/updater/.compose/.production/: Dockerfile  entrypoint.sh
src/updater/.envs/: .app
src/updater/.envs/.local/: .app
src/updater/.envs/.production/: .app
src/updater/compose/local/: Dockerfile
src/updater/compose/production/: Dockerfile
src/updater/tests/updaters/us/fred/: conftest.py  test_collectors.py  test_metrics.py
src/updater/updaters/: README.md
src/updater/updaters/dbmf/: index.py
src/updater/updaters/eu/: collectors.py  countries.py  index.py  interfaces.py
src/updater/updaters/libs/: exceptions.py  helpers.py  statistics.py
src/updater/updaters/us/: exceptions.py  index.py  interfaces.py
src/updater/updaters/us/fred/: collectors.py  metrics.py  metrics_copy.py
src/updater/updaters/us/fred/metrics_plugins/: metric_assets.py  metric_cont_claims.py  metric_debt_gdp.py  metric_durable.py  metric_empl_cost.py  metric_fed.py  metric_gdp_price_index.py  metric_housing.py  metric_ind_prod.py  metric_inflation.py  metric_jobs_nfp.py  metric_jobs_ur.py  metric_money.py  metric_retail.py  metric_trade.py  metric_yields.py
src/updaters/us/: interfaces.py
src/updaters/us/fred/: collectors.py  metrics.py
tests/libs/: test_cleaners.py
updater/: .envs  Dockerfile
updater/src/: main.py
updater/src/db/: base.py
updater/src/updaters/dbmf/: collectors.py  index.py
updater/src/updaters/eu/: collectors.py  index.py  metrics.py
(+26 files in other folders)
