# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db"
python_files = [
    "tests.py",
    "test_*.py",
]

# ==== Coverage ====
[tool.coverage.run]
include = ["frontend/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]


# ==== black ====
[tool.black]
line-length = 119
target-version = ['py311']


# ==== isort ====
[tool.isort]
profile = "black"
line_length = 119
known_first_party = [
    "frontend",
    "config",
]
skip = ["venv/"]
skip_glob = ["**/migrations/*.py"]


# ==== mypy ====
[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
    "mypy_django_plugin.main",
]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"


# ==== PyLint ====
[tool.pylint.MASTER]
load-plugins = [
    "pylint_django",
]
django-settings-module = "config.settings.local"

[tool.pylint.FORMAT]
max-line-length = 119

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-docstring",
    "invalid-name",
]

[tool.pylint.DESIGN]
max-parents = 13

[tool.pylint.TYPECHECK]
generated-members = [
    "REQUEST",
    "acl_users",
    "aq_parent",
    "[a-zA-Z]+_set{1,2}",
    "save",
    "delete",
]


# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/Riverside-Healthcare/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.poetry]
name = "rs-data-frontend"
version = "0.1.0"
description = ""
authors = ["raf-lim <raf.sukiennik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.13"
psycopg = {extras = ["binary"], version = "^3.1.12"}
gunicorn = "^21.2.0"
pandas = "^2.1.2"
requests = "^2.31.0"
httpx = "^0.25.1"
matplotlib = "^3.8.1"


[tool.poetry.group.common.dependencies]
python-slugify = "^8.0.1"
pillow = "^10.1.0"
argon2-cffi = "^23.1.0"
whitenoise = "^6.6.0"
uvicorn = "^0.24.0.post1"
redis = "^5.0.1"
hiredis = "^2.2.3"


[tool.poetry.group.django.dependencies]
django = "^4.2.7"
django-environ = "^0.11.2"
django-model-utils = "^4.3.1"
django-allauth = "^0.58.2"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2023.10"
django-redis = "^5.4.0"
django-storages = {extras = ["s3"], version = "^1.14.2"}
django-anymail = {extras = ["mailgun"], version = "^10.2"}


[tool.poetry.group.dev.dependencies]
werkzeug = {extras = ["watchdog"], version = "^3.0.1"}
ipdb = "^0.13.13"
watchfiles = "^0.21.0"


[tool.poetry.group.django-dev.dependencies]
django-debug-toolbar = "^4.2.0"
django-extensions = "^3.2.3"


[tool.poetry.group.test.dependencies]
mypy = "^1.6.1"
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.6"}
pytest = "^7.4.3"
pytest-sugar = "^0.9.7"
factory-boy = "^3.3.0"
django-coverage-plugin = "^3.1.0"
pytest-django = "^4.6.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-autobuild = "^2021.3.14"


[tool.poetry.group.quality.dependencies]
flake8 = "^6.1.0"
flake8-isort = "^6.1.1"
coverage = "^7.3.2"
black = "^23.10.1"
djlint = "^1.34.0"
pylint-django = "^2.5.5"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
