[tool.poetry]
name = "rs-data-updater"
version = "0.1.0"
description = ""
authors = ["raf-lim <raf.sukiennik@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11,<3.13"
sqlalchemy = "^2.0.21"
pandas = "^2.1.1"
requests = "^2.31.0"
psycopg = "^3.1.12"
pydantic = "^2.4.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
